[package]
name = "surya"
version = "0.2.0"
edition = "2021"
description = "Surya is a multilingual document OCR toolkit, original implementation in Python and PyTorch"
license = "Apache-2.0"
repository = "https://github.com/jimexist/surya-rs"

[dependencies]
anyhow = { version = "1.0.79", optional = true }
candle-core = { version = "0.3.2" }
candle-nn = { version = "0.3.2" }
clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { version = "0.11.0" }
hf-hub = { version = "0.3.2", optional = true }
image = { version = "0.24.8", default-features = false, features = [
  "jpeg",
  "webp",
  "png",
] }
log = { version = "0.4.20" }
opencv = { version = "0.88.8" }
serde = { version = "1.0.196" }
serde_json = { version = "1.0.112" }

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
cli = ["clap", "anyhow", "hf-hub"]

[[bin]]
name = "surya"
path = "src/bin/main.rs"
required-features = ["cli"]
