[package]
name = "surya"
version = "0.4.0"
edition = "2021"
description = "Surya is a multilingual document OCR toolkit, original implementation in Python and PyTorch"
license = "Apache-2.0"
authors = ["Jiayu Liu <jiayu@hey.com>"]
repository = "https://github.com/jimexist/surya-rs"
default-run = "surya"

[dependencies]
anyhow = { version = "1.0.79", optional = true }
candle-core = { version = "0.6.0" }
candle-nn = { version = "0.4.1" }
clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { version = "0.11.0" }
hf-hub = { version = "0.3.2" }
log = { version = "0.4.20" }
opencv = { version = "0.91.2", default-features = false, features = [
  'imgproc',
  'imgcodecs',
] }
serde = { version = "1.0.196" }
serde_json = { version = "1.0.112" }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", features = [
  "mkl-static-lp64-iomp",
], optional = true }
thiserror = { version = "1.0.56" }

[features]
default = ["cli"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = [
  "accelerate-src",
  "candle-core/accelerate",
  "candle-nn/accelerate",
]
mkl = ["intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
cli = ["clap", "anyhow"]

[[bin]]
name = "surya"
path = "src/bin/main.rs"
required-features = ["cli"]

[dev-dependencies]
float-cmp = "0.9.0"
